# px4ctrl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  package.xml
config/: px4ctrl.json  px4ctrl_com.json  px4ctrl_zmq.json  xi35.yaml
config/log/: px4ctrl_2024-07-01-22:15:00  px4ctrl_2024-07-01-22:17:40  px4ctrl_2024-07-01-22:27:21  px4ctrl_2024-07-01-22:27:42  px4ctrl_2024-07-01-22:32:16  px4ctrl_2024-07-15-22:12:03  px4ctrl_2024-07-15-22:13:48  px4ctrl_2024-07-15-22:14:44  px4ctrl_2024-07-15-22:17:02  px4ctrl_2024-07-15-22:19:10  px4ctrl_2024-07-15-22:20:35  px4ctrl_2024-07-16-11:25:20  px4ctrl_2024-07-16-11:27:23  px4ctrl_2024-07-16-11:27:29  px4ctrl_2024-07-16-11:37:37  px4ctrl_2024-07-16-11:37:42  px4ctrl_2024-07-16-11:38:31  px4ctrl_2024-07-16-11:40:03  px4ctrl_2024-07-16-11:41:14  px4ctrl_2024-07-16-11:46:01  px4ctrl_2024-07-16-11:48:47  px4ctrl_2024-07-16-11:50:42  px4ctrl_2024-07-16-11:55:54  px4ctrl_2024-07-16-12:03:37  px4ctrl_2024-07-16-12:04:26  px4ctrl_2024-07-16-12:04:59  px4ctrl_2024-07-16-12:06:13  px4ctrl_2024-07-16-12:16:00  px4ctrl_2024-07-16-12:17:04  px4ctrl_2024-07-16-12:21:37  px4ctrl_2024-07-16-12:36:02
include/: bridge.h  controller.h  crc.hpp  datas.h  fsm.h  imgui.ini  params.h  px4ctrl_bridge.h  px4ctrl_controller.h  px4ctrl_def.h  px4ctrl_fsm.h  px4ctrl_fsm_state.h  px4ctrl_gcs.h  px4ctrl_gcs_client.h  px4ctrl_gcs_ros.h  px4ctrl_gcs_serial.h  px4ctrl_gcs_zmq.h  px4ctrl_mavros.h  px4ctrl_params.h  px4ctrl_se3_controller.h  px4ctrl_state.h  px4ctrl_ui.h  serial.hpp  server.h  types.h
include/com/: px4ctrl_gcs.h  px4ctrl_gcs_client.h  px4ctrl_gcs_zmq.h  serial.hpp  zmq_proxy.h
launch/: mocap.launch.py  mocap.py  run_ctrl.launch  run_sim.launch  sim.launch.py  sim.py
msg/: Command.msg
scripts/: traj.py
src/: bridge.cpp  com_node.cpp  controller.cpp  crc.cpp  frame_transforms.cpp  fsm.cpp  mockmain.cpp  node.cpp  px4ctrl_fsm.cpp  px4ctrl_gcs_client.cpp  px4ctrl_gcs_ros.cpp  px4ctrl_gcs_zmq.cpp  px4ctrl_mavros.cpp  px4ctrl_node.cpp  px4ctrl_se3_controller.cpp  serial.cpp  server.cpp
src/com/: crc.cpp  px4ctrl_gcs_zmq.cpp  serial.cpp  zmq_proxy.cpp
src/fsm/: px4ctrl_bridge.cpp  px4ctrl_controller.cpp  px4ctrl_fsm.cpp  px4ctrl_mavros.cpp  px4ctrl_ui.cpp
tests/: def.cpp  params.cpp  test_def.cpp  test_params.cpp
