<?xml version="1.0"?>
<package format="2">
  <name>px4ctrl</name>
  <version>0.0.0</version>
  <description>A package to control multi-copters using PX4 platform</description>
  <maintainer email="lux@cqu.edu.cn">uav</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>px4ctrl_msgs</depend>
  <depend>px4_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>